# test

./: .gitignore  CMakeLists.txt  README.txt  base.cfg  generate.sh  main.cpp  manifest.xml  rosbridge.cpp  rosbridge.hpp  rosbridgemain.cpp  test.cpp
msg/: Buttons.msg  CommandAngles.msg  DCMActuatorCommand.msg  DCMSeries.msg  FSRs.msg  InertialSensor.msg  NaoQiButtons.msg  NaoQiCommandAngles.msg  NaoQiFSRs.msg  NaoQiInertialSensor.msg  NaoQiSensorAngles.msg  NaoQiSensorCurrents.msg  NaoQiSensorStiffnesses.msg  NaoQiTorsoOdometry.msg  SensorAngles.msg  SensorStiffnesses.msg
msg_external/geometry_msgs/: Point.h  Point32.h  PointStamped.h  Polygon.h  PolygonStamped.h  Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  QuaternionStamped.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  TwistWithCovarianceStamped.h  Vector3.h  Vector3Stamped.h  Wrench.h  WrenchStamped.h
msg_external/sensor_msgs/: CameraInfo.h  ChannelFloat32.h  CompressedImage.h  Image.h  Imu.h  JointState.h  LaserScan.h  PointCloud.h  PointCloud2.h  PointField.h  RegionOfInterest.h
msg_external/tf/: tfMessage.h
services/: alrosalaudiodevice_cpp.inc  alrosalaudiodevice_generated.cpp  alrosalaudiodevice_generated.h  alrosalaudiodevice_h.inc  alrosalaudiodevice_h_declarations.inc  alrosalaudioplayer_cpp.inc  alrosalaudioplayer_generated.cpp  alrosalaudioplayer_generated.h  alrosalaudioplayer_h.inc  alrosalaudioplayer_h_declarations.inc  alrosalaudiosourcelocalization_cpp.inc  alrosalaudiosourcelocalization_generated.cpp  alrosalaudiosourcelocalization_generated.h  alrosalaudiosourcelocalization_h.inc  alrosalaudiosourcelocalization_h_declarations.inc  alrosalbehaviormanager_cpp.inc  alrosalbehaviormanager_generated.cpp  alrosalbehaviormanager_generated.h  alrosalbehaviormanager_h.inc  alrosalbehaviormanager_h_declarations.inc  alrosalbluetooth_cpp.inc  alrosalbluetooth_generated.cpp  alrosalbluetooth_generated.h  alrosalbluetooth_h.inc  alrosalbluetooth_h_declarations.inc  alrosalbonjour_cpp.inc  alrosalbonjour_generated.cpp  alrosalbonjour_generated.h  alrosalbonjour_h.inc  alrosalbonjour_h_declarations.inc  alrosalfacedetection_cpp.inc  alrosalfacedetection_generated.cpp  alrosalfacedetection_generated.h  alrosalfacedetection_h.inc  alrosalfacedetection_h_declarations.inc  alrosalfacetracker_cpp.inc  alrosalfacetracker_generated.cpp  alrosalfacetracker_generated.h  alrosalfacetracker_h.inc  alrosalfacetracker_h_declarations.inc  (+140 more)
srv/: ALAudioDeviceCloseAudioInputs.srv  ALAudioDeviceCloseAudioOutputs.srv  ALAudioDeviceDisableEnergyComputation.srv  ALAudioDeviceEnableEnergyComputation.srv  ALAudioDeviceGetFrontMicEnergy.srv  ALAudioDeviceGetLeftMicEnergy.srv  ALAudioDeviceGetOutputVolume.srv  ALAudioDeviceGetParameter.srv  ALAudioDeviceGetRearMicEnergy.srv  ALAudioDeviceGetRightMicEnergy.srv  ALAudioDeviceOpenAudioInputs.srv  ALAudioDeviceOpenAudioOutputs.srv  ALAudioDevicePlaySine.srv  ALAudioDeviceResetAudio.srv  ALAudioDeviceSendLocalBufferToOutput.srv  ALAudioDeviceSendRemoteBufferToOutput.srv.bad  ALAudioDeviceSetFileAsInput.srv  ALAudioDeviceSetOutputVolume.srv  ALAudioDeviceSetParameter.srv  ALAudioDeviceStartMicrophonesRecording.srv  ALAudioDeviceStopAudioOut.srv  ALAudioDeviceStopMicrophonesRecording.srv  ALAudioDeviceSubscribeRemoteModule.srv  ALAudioDeviceUnSubscribeRemoteModule.srv  ALAudioDeviceWaitSynchronizer.srv  ALAudioPlayerGetMasterVolume.srv  ALAudioPlayerGetVolume.srv  ALAudioPlayerGoTo.srv  ALAudioPlayerLoadFile.srv  ALAudioPlayerPause.srv  ALAudioPlayerPlay.srv  ALAudioPlayerPlayFile.srv  ALAudioPlayerPlayFileFromPosition.srv  ALAudioPlayerPlayFileFromPositionString.srv  ALAudioPlayerPlayFileInLoop.srv  ALAudioPlayerPlayFileInLoopString.srv  ALAudioPlayerPlayFileString.srv  ALAudioPlayerPlayInLoop.srv  ALAudioPlayerPlayInLoopInt.srv  ALAudioPlayerPlayInt.srv  (+387 more)
test/: CMakeLists.txt  test_say.cpp  test_topics.cpp
test/services/: CMakeLists.txt  test_alaudiodevice_cpp.inc  test_alaudioplayer_cpp.inc  test_alaudiosourcelocalization_cpp.inc  test_albehaviormanager_cpp.inc  test_albluetooth_cpp.inc  test_albonjour_cpp.inc  test_alfacedetection_cpp.inc  test_alfacetracker_cpp.inc  test_alfilemanager_cpp.inc  test_alframemanager_cpp.inc  test_alfsr_cpp.inc  test_alinfrared_cpp.inc  test_allandmarkdetection_cpp.inc  test_allaser_cpp.inc  test_allauncher_cpp.inc  test_alleds_cpp.inc  test_allogger_cpp.inc  test_almemory_cpp.inc  test_alsonar_cpp.inc  (+16 more)
tools/: copyBoostAndLog4cxxToToolchain.sh  generate-gscam.sh  generate-t001chain-sdk.sh  getros.sh
topics/: alrosgatherer.cpp  alrosgatherer.h  alrospublisher.cpp  alrospublisher.h  alrossubscriber.cpp  alrossubscriber.h
(+15 files in other folders)
